tests/miz/pass/types/pass_type_elaboration_local_object_mode_expansion_001.miz
definition
  mode LocalObjectModeDef: LocalObjectMode is object;
end;

reserve z for LocalObjectMode;
