tests/miz/fail/types/fail_type_elaboration_local_mode_attributed_rhs_chain_evidence_gap_001.miz
definition
  let x be set;
  attr MarkedAttrDef: x is marked means thesis;
end;

definition
  mode MarkedModeExpansionDef: MarkedMode is marked set;
end;

definition
  mode ChainMarkedModeExpansionDef: ChainMarkedMode is MarkedMode;
end;

reserve z for ChainMarkedMode;
